--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <div class="window">
     <!-- Title bar -->
     <div class="title-bar">
-      <div class="title-bar-text">Your Name</div>
+      <div class="title-bar-text">Aness</div>
       <div class="title-bar-controls">
         <button aria-label="Minimize"></button>
         <button aria-label="Maximize"></button>
